--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,9 @@
 You May procced to <%= link_to "Login now", login_path%>
 <br>
 <br>
+<%= link_to "Go to Home", home_path %>
+<br>
+<br>
 <%= link_to "Back", users_path %>
 
 </center>
